fix add, almost get remove

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     <!-- <link rel="stylesheet" href=""> -->
     <script src="jquery-3.6.0.slim.min.js"></script>
     <script src="popup.js"></script>
+    <!-- <script type="text/javascript" src="progress.js" defer></script> -->
 </head>
 <body>
 
